Fix content centering on firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@ body {
    justify-content: center;
    align-items: center;
 
+   margin: 0;
+   height: 100%;
+
    background-color: var(--bg-gray);
 }
 
